likes for friends and non friends

--- a/ai/data_gen.ipynb
+++ b/ai/data_gen.ipynb
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 235,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [4, 5], 1: [], 2: [0, 4, 6, 4], 3: [0, 0, 6, 6], 4: [6, 7], 5: [8], 6: [5, 4, 5, 4], 7: [6, 5, 5], 8: [3], 9: [8, 8, 8, 3, 1]}\n"
+      "{0: [5, 0, 0], 1: [9, 9, 9], 2: [4, 7, 6], 3: [2, 9, 2, 8, 0], 4: [3, 5, 7], 5: [5, 4, 9, 4, 2, 6, 5], 6: [5, 1, 3, 2], 7: [5, 5, 5], 8: [3, 5, 9], 9: [1, 6, 1, 8, 2, 6, 3, 3, 5, 4]}\n"
      ]
     }
    ],
@@ -156,42 +156,24 @@
     "post_min = 10\n",
     "post_max = 20\n",
     "\n",
-    "prob_like = 0.05\n",
+    "prob_like_friend = 0.05\n",
+    "prob_like_not_friend = 0.01\n",
     "\n",
     "posts = {}\n",
     "for user in range(num_user):\n",
     "    num_posts = np.random.randint(low=post_min, high=post_max) #num of posts from user\n",
     "    out = []\n",
     "    for post in range(num_posts):\n",
-    "        for i, friend in enumerate(user_friend[user]):\n",
-    "            if friend == True and np.random.rand(1) <= prob_like:\n",
+    "        for i, person in enumerate(user_friend[user]):\n",
+    "            p = np.random.rand(1)\n",
+    "            if person == True and  p <= prob_like_friend:\n",
     "                out.append(i)\n",
+    "            elif person == False and p <= prob_like_not_friend:\n",
+    "                out.append(i)\n",
+    "\n",
     "    posts[user] = out\n",
     "\n",
     "print(posts)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([0.7090293])"
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.rand(1)"
    ],
    "metadata": {
     "collapsed": false,
